Article Section added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
 
       </div>
     </section>
+    <section>
+      <article class="article">
+        <dir class="article-content">
+          <div>
+            <h3 class="article-title">Their lives depend on your donation</h3>
+            <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem veritatis excepturi consectetur fugiat, doloremque ex optio distinctio minima inventore reprehenderit quae, in obcaecati. Repudiandae earum illum quis amet provident blanditiis suscipit id, quisquam porro! Hic ab, iusto, vitae possimus aperiam odit sequi consequatur incidunt eveniet dolore exercitationem aut animi repudiandae nemo voluptatibus blanditiis harum. Praesentium odit distinctio incidunt omnis.</p>
+            <button class="btn-primary btn-2nd">How to Contribute?</button>
+          </div>
+          <div>
+            <img src="images/donation8.jpg" alt="" class="article-img">
+          </div>
+        </dir>
+        <article class="article">
+          <dir class="article-content">
+            <div>
+              <img src="images/donation0.jpg" alt="" class="article-img">
+            </div>
+            <div>
+              <h3 class="article-title">They need us to suvive</h3>
+              <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam autem veritatis excepturi consectetur fugiat, doloremque ex optio distinctio minima inventore reprehenderit quae, in obcaecati. Repudiandae earum illum quis amet provident blanditiis suscipit id, quisquam porro! Hic ab, iusto, vitae possimus aperiam odit sequi consequatur incidunt eveniet dolore exercitationem aut animi repudiandae nemo voluptatibus blanditiis harum. Praesentium odit distinctio incidunt omnis.</p>
+              <button class="btn-primary btn-2nd">How to Contribute?</button>
+            </div>
+      </article>
+    </section>
   </main>
   <footer>
 
