Footer Section Added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Practice Projects</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&family=Manrope:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -118,8 +119,9 @@
       </div>
     </section>
   </main>
-  <footer>
-
+  <footer class="footer">
+    <h3 class="footer-title">Be Humbal</h3>
+    <p class="footer-description">I am gona do it</p>
   </footer>
 </body>
 </html>
